SERVER-34323 Add DatabaseVersion field to unsharded databases when adding shard to cluster on FCV 4.0