src/mongo/db/s/config/sharding_catalog_manager_shard_operations.cpp
@@ -67,6 +67,7 @@
 #include "mongo/s/cluster_identity_loader.h"
 #include "mongo/s/grid.h"
 #include "mongo/s/shard_util.h"
+#include "mongo/s/versioning.h"
 #include "mongo/s/write_ops/batched_command_request.h"
 #include "mongo/s/write_ops/batched_command_response.h"
 #include "mongo/util/fail_point_service.h"
@@ -700,6 +701,15 @@ StatusWith<std::string> ShardingCatalogManager::addShard(
     // Add all databases which were discovered on the new shard
     for (const auto& dbName : dbNamesStatus.getValue()) {
         DatabaseType dbt(dbName, shardType.getName(), false);
+
+        // If we're in FCV 4.0, we should add a version to each database.
+        if (serverGlobalParams.featureCompatibility.getVersion() ==
+                ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo40 ||
+            serverGlobalParams.featureCompatibility.getVersion() ==
+                ServerGlobalParams::FeatureCompatibility::Version::kUpgradingTo40) {
+            dbt.setVersion(Versioning::newDatabaseVersion());
+        }
+
         Status status = Grid::get(opCtx)->catalogClient()->updateDatabase(opCtx, dbName, dbt);
         if (!status.isOK()) {
             log() << "adding shard " << shardConnectionString.toString()
